<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
     		android:scrollbars="vertical" 
     		android:layout_height="fill_parent" 
     		android:layout_width="fill_parent">
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

			<!--  Tab 1: Scenario Meta Information  -->            
    		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		   	android:id="@+id/metaInfoTable"
    			android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
    			android:scrollbars="vertical"
    			>    			
					<TextView
						android:id="@+id/labelSceneName"
        				android:layout_width="wrap_content"
       					android:layout_height="wrap_content"
       					android:text="@string/labelSceneName"
       				/>
        			<EditText
        				android:id="@+id/sceneName"
        				android:layout_width="fill_parent"
        				android:layout_height="wrap_content"
        				android:layout_toRightOf="@id/labelSceneName"
        				android:background="@android:drawable/editbox_background"
        				/>		

    			<View
   					android:id="@+id/sep1"
       				android:layout_below="@id/sceneName"        				
        			android:layout_height="2dip"
       				android:layout_width="fill_parent"
        			android:background="#FF909090" />
        			
    				<TextView
    					android:id="@+id/labelImage"
    					android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
       					android:textStyle="bold"
        				android:text="Image:"
        				android:layout_below="@id/sep1"        				
        			/>
        			<TextView 
    					android:id="@+id/labelImageName"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
       					android:textStyle="bold"
        				android:gravity="left"
        				android:textColor="#FF0000"
        				android:text="Default  (Tap Image to change)    "
        				android:layout_alignTop="@id/labelImage"
        				android:layout_toRightOf="@id/labelImage"
	       			/>
        			<ImageButton 
        				android:id="@+id/sceneImage"
        				android:layout_width="40dip"
        				android:layout_height="40dip"
        				android:paddingLeft="40dp"
        				android:adjustViewBounds="true" 
        				android:scaleType="centerCrop"
        				android:layout_alignTop="@id/labelImageName"
        				android:layout_toRightOf="@id/labelImageName"
        				android:background="@drawable/zimp"
        				/>
       			<View
	   					android:id="@+id/sep2"
    	   				android:layout_below="@id/sceneImage"        				
        				android:layout_width="fill_parent"
       	 				android:layout_height="2dip"
        				android:background="#FF909090" />
        			<TextView
        				android:id="@+id/labelStory"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:layout_below="@id/sep2"        				
       					android:textStyle="bold"
        				android:text="Story Name: "
        			/>
           			<EditText
        				android:id="@+id/storyName"
    	   				android:layout_below="@id/sep2"
        				android:layout_toRightOf="@id/labelStory"
        				android:layout_width="fill_parent"
        				android:layout_height="wrap_content"
        				android:background="@android:drawable/editbox_background"
        				/>
        			<CheckBox android:id="@+id/isStandalone"
        				android:layout_below="@id/labelStory"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:text="Standalone Scenario (no story)" />
        			<TextView
        				android:id="@+id/labelStandalone"
        				android:layout_below="@id/isStandalone"
        				android:layout_width="fill_parent"
        				android:layout_height="wrap_content"
        				android:text="Note: Existing Name = Old Story Addition. New Name = Create New Story."
        				android:textStyle="italic"
        			/>
        		<View
	   					android:id="@+id/sep3"
    	   				android:layout_below="@id/labelStandalone"        				
        				android:layout_width="fill_parent"
       	 				android:layout_height="2dip"
        				android:background="#FF909090" />
    				<TextView
        				android:id="@+id/labelDesc"
        				android:layout_width="fill_parent"
        				android:layout_height="wrap_content"
       					android:textStyle="bold"
        				android:layout_below="@id/sep3"        				
	       				android:text="Description: (max 500 words)"
        			/>
           			<EditText
        				android:id="@+id/sceneDesc"
    	   				android:layout_below="@id/labelDesc"        				
        				android:layout_width="fill_parent"
        				android:layout_height="wrap_content"
        				android:gravity="fill_horizontal"
        				android:background="@android:drawable/editbox_background"
        				/>
       			<View
       	 				android:layout_height="2dip"
        				android:layout_width="fill_parent"
    	   				android:layout_below="@id/sceneDesc"        				
        				android:background="#FF909090" />
    		</RelativeLayout>	
    		
    		<!--  Tab 2: Tiles  -->
    		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    			android:id="@+id/pathsTopLevel"
			    android:orientation="vertical"
			    android:scrollbars="vertical"
    			android:layout_width="fill_parent"
    			android:layout_height="wrap_content">
    			<TextView
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:layout_marginTop="10dip"
        			android:text="@string/seMapLabel"
    			/>
    			<Spinner 
        			android:id="@+id/mapSpinner"
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:prompt="@string/seChoosePrompt"
    			/>
       			<View
       	 				android:layout_height="2dip"
        				android:layout_width="fill_parent"
        				android:background="#FF909090" />
    			<TextView
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:text="@string/seItemsLabel"
    			/>
    			<Spinner 
        			android:id="@+id/itemSpinner"
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:prompt="@string/seChoosePrompt"
    			/>
       			<View
       	 				android:layout_height="2dip"
        				android:layout_width="fill_parent"
        				android:background="#FF909090" />
    			<TextView
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:text="@string/seDevCardsLabel"
    			/>
    			<Spinner 
        			android:id="@+id/devCardsSpinner"
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:prompt="@string/seChoosePrompt"
    			/>
       			<View
       	 				android:layout_height="2dip"
        				android:layout_width="fill_parent"
    	   				android:layout_below="@id/devCardsSpinner"        				
        				android:background="#FF909090" />
    				
    		</LinearLayout>

			<!--  Tab 3: Map Construction -->    		
    		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    			android:id="@+id/mapTopLevel"
			    android:orientation="vertical"
			    android:scrollbars="vertical"
    			android:layout_width="fill_parent"
    			android:layout_height="wrap_content">
    			<TextView
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:layout_marginTop="10dip"
        			android:text="@string/seStartTile"
    			/>
    			<Spinner 
        			android:id="@+id/startTileSpinner"
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:prompt="@string/seChoosePrompt"
    			/>
    			<TextView
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:layout_marginTop="10dip"
        			android:text="@string/seDestTile"
    			/>
    			<Spinner 
        			android:id="@+id/destTileSpinner"
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:prompt="@string/seChoosePrompt"
    			/>
    			<TextView
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:layout_marginTop="10dip"
        			android:text="@string/seMapLayout"
    			/>
    			<Spinner 
        			android:id="@+id/mapLayoutSpinner"
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:prompt="@string/seChoosePrompt"
    			/>
    		</LinearLayout>
    		
			<!--  Tab 4: Objectives  -->            
    		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    			android:id="@+id/objectivesTopLevel"
			    android:orientation="vertical"
			    android:scrollbars="vertical"
    			android:layout_width="fill_parent"
    			android:layout_height="wrap_content">

    			<Button
    				android:id="@+id/objective0"
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:padding="10dp"
        			android:text="@string/seObjective"
    			/>
    			<Button
    				android:id="@+id/objective1"
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:padding="10dp"
        			android:text="@string/seObjective"
    			/>
    			<Button
    				android:id="@+id/objective2"
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:padding="10dp"
        			android:text="@string/seObjective"
    			/>
    			<Button
    				android:id="@+id/objective3"
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:padding="10dp"
        			android:text="@string/seObjective"
    			/>
    			<Button
    				android:id="@+id/objective4"
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:padding="10dp"
        			android:text="@string/seObjective"
    			/>
			</LinearLayout> 
		               
                

  			<!--  Tab 5: Rules Tab  -->            
    		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		   	android:id="@+id/rulesTopLevel"
    			android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
    			android:scrollbars="vertical"
    			>    			
					<TextView
						android:id="@+id/labelMaxHitPoints"
        				android:layout_width="wrap_content"
       					android:layout_height="wrap_content"
       					android:text="@string/seMaxHitPoints"
       				/>
        			<EditText
        				android:id="@+id/maxHitPoints"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:layout_toRightOf="@id/labelMaxHitPoints"
        				android:text="10"
        				android:background="@android:drawable/editbox_background"
        			/>		
					<TextView
						android:id="@+id/labelStartHitPoints"
        				android:layout_below="@id/maxHitPoints"
        				android:layout_alignLeft="@id/labelMaxHitPoints"
        				android:layout_width="wrap_content"
       					android:layout_height="wrap_content"
       					android:text="@string/seStartHitPoints"
       				/>
        			<EditText
        				android:id="@+id/startHitPoints"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:layout_toRightOf="@id/labelStartHitPoints"
        				android:layout_below="@id/maxHitPoints"
        				android:text="6"
        				android:background="@android:drawable/editbox_background"
        			/>
       				<View
       					android:id="@+id/rulesSep1"
       	 				android:layout_height="2dip"
        				android:layout_width="fill_parent"
    	   				android:layout_below="@id/startHitPoints"        				
        				android:background="#FF909090" />
        			
					<TextView
						android:id="@+id/labelDiscardRounds"
        				android:layout_below="@id/rulesSep1"
        				android:layout_width="wrap_content"
       					android:layout_height="wrap_content"
       					android:text="@string/seDiscardRounds"
       				/>
        			<EditText
        				android:id="@+id/discardRounds"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:layout_toRightOf="@id/labelDiscardRounds"
        				android:layout_below="@id/rulesSep1"
        				android:text="3"
        				android:background="@android:drawable/editbox_background"
        			/>
					<TextView
						android:id="@+id/labelStartTime"
        				android:layout_below="@id/discardRounds"
        				android:layout_width="wrap_content"
       					android:layout_height="wrap_content"
       					android:text="@string/seLabelStartTime"
       				/>
        			<EditText
        				android:id="@+id/editStartTime"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:layout_toRightOf="@id/labelStartTime"
        				android:layout_below="@id/discardRounds"
        				android:text="9"
        				android:background="@android:drawable/editbox_background"
        			/>
					<TextView
						android:id="@+id/labelEndTime"
        				android:layout_below="@id/editStartTime"
        				android:layout_width="wrap_content"
       					android:layout_height="wrap_content"
       					android:text="@string/seLabelEndTime"
       				/>
        			<EditText
        				android:id="@+id/editEndTime"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:layout_toRightOf="@id/labelEndTime"
        				android:layout_below="@id/editStartTime"
        				android:text="12"
        				android:background="@android:drawable/editbox_background"
        			/>        			
       				<View
       					android:id="@+id/rulesSep2"
       	 				android:layout_height="2dip"
        				android:layout_width="fill_parent"
    	   				android:layout_below="@id/editEndTime"        				
        				android:background="#FF909090" />
        		</RelativeLayout>

  			<!--  Tab 6: Generate Tab  -->            

    		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    			android:id="@+id/generateTopLevel"
			    android:orientation="vertical"
			    android:scrollbars="vertical"
    			android:layout_width="fill_parent"
    			android:layout_height="wrap_content">

    			<Button
    				android:id="@+id/buttonGenerate"
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:padding="10dp"
        			android:text="@string/segenGenerate"
    			/>
				<ProgressBar
			         android:layout_width="fill_parent"
			         android:layout_height="wrap_content"
			         style="@android:style/Widget.ProgressBar.Horizontal"
			         android:layout_marginRight="5dp" />
       			<EditText
       				android:id="@+id/editGenerateResults"
       				android:layout_width="fill_parent"
       				android:layout_height="fill_parent"
       				android:editable="false"
       				android:text="Please fill rest of tabs to enable Generate Button"
       				android:background="@android:drawable/editbox_background"
       			/>
    			<Button
    				android:id="@+id/buttonPlayZimp"
        			android:layout_width="fill_parent"
        			android:layout_height="wrap_content"
        			android:padding="10dp"
        			android:text="@string/segenPlay"
    			/>    			
				<Button 
					android:id="@+id/buttonExport"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:padding="10dp"
					android:text="Export Story to sdcard/zimpdata/"
				/>				
			</LinearLayout>
      	</FrameLayout>
    </LinearLayout>
    </ScrollView>        
        
</TabHost>